Add config for world spawn protection